# C5-TP-conway

./: .gitignore  CMakeLists.txt  GPT.md  README.md  all-kernel.md  buf  build.sh  conway.cpp  conway.cu  conway.h  conway.py  report1.nsys-rep  uin16-mask.ncu-rep
latex/: main.tex  presentation.tex
presentation/: main.nav  main.tex  main.vrb
